@@ -41,6 +41,7 @@ version <next>:
 - FITS demuxer and decoder
 - FITS muxer and encoder
 - add --disable-autodetect build switch
+- drop deprecated qtkit input device (use avfoundation instead)
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
